--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <h1 style="color:Navy;">Haifan(Kevin) Wu</h1>
   <p>
-    <em>Junior CS student of <strong><a href="https://www.utdallas.edu/">University of Texas at Dallas</a> </strong> </em>
+    <em>Senior CS student of <strong><a href="https://www.utdallas.edu/">University of Texas at Dallas</a> </strong> </em>
   </p>
   <p>I have a few<a href="projects.html"> project!</a></p>
   <hr>
